--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
 <body>
   <h1><span class="ping">#</span>Austin Systems Programming</h1>
   <p>We're a collection of programmers, engineers and technologists living in Austin, TX. We meet once a month to learn about systems programming.</p>
+  <h2><span class="ping">#</span>Next meetup</h2>
+  <p>Our first meetup will be
+    <em>August 19, 6pm-8pm</em>.</p>
+  <p>Schedule:</p>
+  <ul>
+    <li>6:00pm: Doors open, food is served</li>
+    <li>6:30pm: Talks start</li>
+    <li>7:30pm: Talks conclude</li>
+    <li>8:00pm: We leave the venue and walk to a nearby bar</li>
+  </ul>
+  <p>If you're interested in giving a 20 minute presentation (and 5 minutes for questions), please
+    <a href="mailto:hello@adamchalmers.com">let us know</a>.</p>
+  <h2><span class="ping">#</span>About</h2>
   <p>We're focused on high-quality talks from engineers about what they've built or learned recently. Not product pitches. We welcome anyone interested in digging below their abstractions, learning how their systems work and how to make their own. We learn by teaching, so if anything is unclear or confusing, we make time to figure it out as a group.</p>
   <p>Speakers will share their experience building, debugging, testing, and maintaining:</p>
   <ul>
