--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
   <h1><span class="ping">#</span>Austin Systems Programming</h1>
   <p>We're a collection of programmers, engineers and technologists living in Austin, TX. We meet once a month to learn about systems programming.</p>
-  <h2><span class="ping">#</span>Next meetup</h2>
+  <h2><span class="ping">#</span>Schedule</h2>
   <p>Our first meetup will be
     <em>August 19, 6pm-8pm</em>.</p>
   <p>Schedule:</p>
