--- a/index.html
+++ b/index.html
@@ -1,46 +1,65 @@
-<head>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <h1><span class="ping">#</span>Austin Systems Programming</h1>
-  <p>We're a collection of programmers, engineers and technologists living in Austin, TX. We meet once a month to learn about systems programming.</p>
-  <h2><span class="ping">#</span>Schedule</h2>
-  <p>Our first meetup will be
-    <em>August 19, 6pm-8pm</em>.</p>
-  <p>Schedule:</p>
-  <ul>
-    <li>6:00pm: Doors open, food is served</li>
-    <li>6:30pm: Talks start</li>
-    <li>7:30pm: Talks conclude</li>
-    <li>8:00pm: We leave the venue and walk to a nearby bar</li>
-  </ul>
-  <p>If you're interested in giving a 20 minute presentation (and 5 minutes for questions), please
-    <a href="mailto:hello@adamchalmers.com">let us know</a>.</p>
-  <h2><span class="ping">#</span>About</h2>
-  <p>We're focused on high-quality talks from engineers about what they've built or learned recently. Not product pitches. We welcome anyone interested in digging below their abstractions, learning how their systems work and how to make their own. We learn by teaching, so if anything is unclear or confusing, we make time to figure it out as a group.</p>
-  <p>Speakers will share their experience building, debugging, testing, and maintaining:</p>
-  <ul>
-    <li>Compilers, parsers, virtual machines, IDEs, profiling, etc.</li>
-    <li>Databases, storage, networking, distributed systems</li>
-    <li>Large scale infrastructure, low latency, high availability services</li>
-    <li>Formal methods, verification</li>
-    <li>Browsers, kernel development, security, etc.</li>
-    <li>Anything else in the spirit of curiosity and excitement about how computers really work</li>
-  </ul>
-  <p>To join us, just register for our invitations
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSepTMSMmaDwUD4MACLew9jc2wnME9uMQnH_LAasvrMBUvYzXw/viewform?usp=dialog">using this form</a>.</p>
-  <p>If you'd like to sponsor a meeting (buying pizza for the attendees), please
-    <a href="mailto:hello@adamchalmers.com">let us know</a>. Sponsors may talk for five minutes at the start or end of the meetup.</p>
-  <h2><span class="ping">#</span>Kindred spirits</h2>
-  <ul>
-    <li><a href="https://https://belowclevel.org//">Below C Level, New Orleans</a></li>
-    <li><a href="https://nycsystems.xyz/">NYC Systems</a></li>
-    <li><a href="https://munichdatabases.xyz/">Munich Database Meetup</a></li>
-    <li><a href="https://berlinsystems.xyz/">Berlin Systems Group</a></li>
-    <li><a href="https://twitter.com/BengaluruSys">Bengaluru Systems Meetup</a></li>
-    <li><a href="https://www.sfsystemsclub.com/">San Francisco Systems Club</a></li>
-    <li><a href="https://helsystems.xyz/">Systems from HEL</a></li>
-    <li><a href="https://dcsystems.xyz/">DC Systems</a></li>
-    <li><a href="https://vancouver.systems/">Vancouver Systems</a></li>
-  </ul>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Austin Systems Programming</title>
+    <link rel="stylesheet" href="styles.css">
+    <meta property="og:title" content="Austin Systems Programming">
+    <meta
+      property="og:description"
+      content="A meetup for curious low-level engineers in Austin, TX."
+    >
+    <meta
+      property="og:url"
+      content="https://austinsystems.org"
+    >
+    <meta
+      property="og:image"
+      content="/asp.png"
+    >
+  </head>
+  <body>
+    <h1><span class="ping">#</span>Austin Systems Programming</h1>
+    <p>We're a collection of programmers, engineers and technologists living in Austin, TX. We meet once a month to learn about systems programming.</p>
+    <h2><span class="ping">#</span>Schedule</h2>
+    <p>Our first meetup will be
+      <em>August 19, 6pm-8pm</em>.</p>
+    <p>Schedule:</p>
+    <ul>
+      <li>6:00pm: Doors open, food is served</li>
+      <li>6:30pm: Talks start</li>
+      <li>7:30pm: Talks conclude</li>
+      <li>8:00pm: We leave the venue and walk to a nearby bar</li>
+    </ul>
+    <p>If you're interested in giving a 20 minute presentation (and 5 minutes for questions), please
+      <a href="mailto:hello@adamchalmers.com">let us know</a>.</p>
+    <h2><span class="ping">#</span>About</h2>
+    <p>We're focused on high-quality talks from engineers about what they've built or learned recently. Not product pitches. We welcome anyone interested in digging below their abstractions, learning how their systems work and how to make their own. We learn by teaching, so if anything is unclear or confusing, we make time to figure it out as a group.</p>
+    <p>Speakers will share their experience building, debugging, testing, and maintaining:</p>
+    <ul>
+      <li>Compilers, parsers, virtual machines, IDEs, profiling, etc.</li>
+      <li>Databases, storage, networking, distributed systems</li>
+      <li>Large scale infrastructure, low latency, high availability services</li>
+      <li>Formal methods, verification</li>
+      <li>Browsers, kernel development, security, etc.</li>
+      <li>Anything else in the spirit of curiosity and excitement about how computers really work</li>
+    </ul>
+    <p>To join us, just register for our invitations
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSepTMSMmaDwUD4MACLew9jc2wnME9uMQnH_LAasvrMBUvYzXw/viewform?usp=dialog">using this form</a>.</p>
+    <p>If you'd like to sponsor a meeting (buying pizza for the attendees), please
+      <a href="mailto:hello@adamchalmers.com">let us know</a>. Sponsors may talk for five minutes at the start or end of the meetup.</p>
+    <h2><span class="ping">#</span>Kindred spirits</h2>
+    <ul>
+      <li><a href="https://belowclevel.org/">Below C Level, New Orleans</a></li>
+      <li><a href="https://nycsystems.xyz/">NYC Systems</a></li>
+      <li><a href="https://munichdatabases.xyz/">Munich Database Meetup</a></li>
+      <li><a href="https://berlinsystems.xyz/">Berlin Systems Group</a></li>
+      <li><a href="https://twitter.com/BengaluruSys">Bengaluru Systems Meetup</a></li>
+      <li><a href="https://www.sfsystemsclub.com/">San Francisco Systems Club</a></li>
+      <li><a href="https://helsystems.xyz/">Systems from HEL</a></li>
+      <li><a href="https://dcsystems.xyz/">DC Systems</a></li>
+      <li><a href="https://vancouver.systems/">Vancouver Systems</a></li>
+    </ul>
+  </body>
+</html>
