--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
       <li>7:30pm: Talks conclude</li>
       <li>8:00pm: We leave the venue and walk to a nearby bar</li>
     </ul>
-    <p>If you're interested in giving a 20 minute presentation (and 5 minutes for questions), please
+    <p>If you're interested in:</p>
+    <ul>
+      <li>Giving a 20 minute presentation (with 5 minutes for questions)</li>
+      <li>Sponsoring (i.e. buying pizza, which gets you a 5 minute intro before or after the talks)</li>
+      <li>Filming the talks for YouTube</li>
+    </ul>
+    <p>then please
       <a href="mailto:hello@adamchalmers.com">let us know</a>.</p>
     <h2><span class="ping">#</span>About</h2>
     <p>We're focused on high-quality talks from engineers about what they've built or learned recently. Not product pitches. We welcome anyone interested in digging below their abstractions, learning how their systems work and how to make their own. We learn by teaching, so if anything is unclear or confusing, we make time to figure it out as a group.</p>
@@ -47,8 +53,6 @@
     </ul>
     <p>To join us, just register for our invitations
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSepTMSMmaDwUD4MACLew9jc2wnME9uMQnH_LAasvrMBUvYzXw/viewform?usp=dialog">using this form</a>.</p>
-    <p>If you'd like to sponsor a meeting (buying pizza for the attendees), please
-      <a href="mailto:hello@adamchalmers.com">let us know</a>. Sponsors may talk for five minutes at the start or end of the meetup.</p>
     <h2><span class="ping">#</span>Kindred spirits</h2>
     <ul>
       <li><a href="https://belowclevel.org/">Below C Level, New Orleans</a></li>
