--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     >
     <meta
       property="og:image"
-      content="/asp.png"
+      content="https://austin-systems-programming.pages.dev/asp.png"
     >
   </head>
   <body>
