--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Austin Systems Programming">
     <meta
       property="og:description"
-      content="A meetup for curious low-level engineers in Austin, TX."
+      content="A meetup for curious low-level engineers in Austin, TX. We meet in-person monthly."
     >
     <meta
       property="og:url"
@@ -16,6 +16,10 @@
     >
     <meta
       property="og:image"
+      content="https://austin-systems-programming.pages.dev/asp.png"
+    >
+    <meta
+      property="twitter:card"
       content="https://austin-systems-programming.pages.dev/asp.png"
     >
   </head>
