--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     >
     <meta
       property="og:image"
-      content="https://austin-systems-programming.pages.dev/asp.png"
+      content="https://austinsystems.org/asp.png"
     >
     <meta
       property="twitter:card"
-      content="https://austin-systems-programming.pages.dev/asp.png"
+      content="https://austinsystems.org/asp.png"
     >
   </head>
   <body>
