Tweak aspect ratios

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     >
     <meta
       property="og:image"
-      content="https://austinsystems.org/asp.png"
+      content="https://austinsystems.org/asp_16_9.png"
     >
     <meta
-      property="twitter:card"
-      content="https://austinsystems.org/asp.png"
+      property="twitter:image"
+      content="https://austinsystems.org/asp_16_9.png"
     >
   </head>
   <body>
