--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <ul>
       <li>Giving a 20 minute presentation (with 5 minutes for questions)</li>
       <li>Sponsoring (i.e. buying pizza, which gets you a 5 minute intro before or after the talks)</li>
+      <li>Having your office host the event</li>
       <li>Filming the talks for YouTube</li>
     </ul>
     <p>then please
