--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p>We're a collection of programmers, engineers and technologists living in Austin, TX. We meet once a month to learn about systems programming.</p>
     <h2><span class="ping">#</span>Schedule</h2>
     <p>Our first meetup will be
-      <em>August 19, 6pm-8pm</em>.</p>
+      <em>August 19, 6pm-8pm</em>, at the Riversouth building (401 South 1st St, Suite 1155, 78704). The building has $5/hour parking, and there's plenty of other parking nearby, as well as bus stops.</p>
     <p>Schedule:</p>
     <ul>
       <li>6:00pm: Doors open, food is served</li>
