--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
     <p>We're a collection of programmers, engineers and technologists living in Austin, TX. We meet once a month to learn about systems programming.</p>
     <h2><span class="ping">#</span>Schedule</h2>
     <p>Our first meetup will be
-      <em>August 19, 6pm-8pm</em>, at the Riversouth building (401 South 1st St, Suite 1155, 78704). The building has $5/hour parking, and there's plenty of other parking nearby, as well as bus stops.</p>
+      <em>August 19, 6pm-8pm</em>, at the
+      <em>Riversouth building</em>
+      (401 South 1st St, Suite 1155, 78704). The building has $5/hour parking, and there's plenty of other parking nearby, as well as bus stops. We'll meet
+      <em>on its rooftop terrace</em>, with an amazing view of the river and the Austin skyline.</p>
     <p>Schedule:</p>
     <ul>
       <li>6:00pm: Doors open, food is served</li>
