Update event with 7 days to go

--- a/index.html
+++ b/index.html
@@ -25,19 +25,26 @@
   </head>
   <body>
     <h1><span class="ping">#</span>Austin Systems Programming</h1>
-    <p>We're a collection of programmers, engineers and technologists living in Austin, TX. We meet once a month to learn about systems programming.</p>
+    <p>We're a collection of programmers, engineers and technologists living in Austin, TX. We meet once a month to learn about systems programming. To join us,
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSepTMSMmaDwUD4MACLew9jc2wnME9uMQnH_LAasvrMBUvYzXw/viewform?usp=dialog">click here</a>.</p>
     <h2><span class="ping">#</span>Schedule</h2>
     <p>Our first meetup will be
       <em>August 19, 6pm-8pm</em>, at the
       <em>Riversouth building</em>
-      (401 South 1st St, Suite 1155, 78704). The building has $5/hour parking, and there's plenty of other parking nearby, as well as bus stops. We'll meet
+      (401 South 1st St, Suite 1155, 78704). The building has $5/hour parking, and there's plenty of other parking nearby, as well as bus stops and bike lanes. We'll meet
       <em>on its rooftop terrace</em>, with an amazing view of the river and the Austin skyline.</p>
     <p>Schedule:</p>
     <ul>
       <li>6:00pm: Doors open, food is served</li>
-      <li>6:30pm: Talks start</li>
+      <li>6:30pm:
+        <a href="https://www.austinseipp.com/">Austin Seipp</a>
+        on building a cryptography library from minimal secure primitives</li>
+      <li>7:00pm:
+        <a href="https://samjs.io">Sam Scott</a>
+        on Rudy, his LLDB debugger extension for querying and displaying Rust debug info</li>
       <li>7:30pm: Talks conclude</li>
-      <li>8:00pm: We leave the venue and walk to a nearby bar</li>
+      <li>8:00pm: We leave the venue and walk to
+        <a href="https://www.google.com/maps/place/white+tiger+soco/data=!4m2!3m1!1s0x8644b5b735c32c5b:0x382a7b1ea168b41?sa=X&ved=1t:242&ictx=111">White Tiger</a></li>
     </ul>
     <p>If you're interested in:</p>
     <ul>
