--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <li>7:00pm:
         <a href="https://samjs.io">Sam Scott</a>
         on Rudy, his LLDB debugger extension for querying and displaying Rust debug info</li>
-      <li>7:30pm: Talks conclude</li>
-      <li>8:00pm: We leave the venue and walk to
+      <li>7:30pm: Talks conclude. Guests all tell themselves "wow, what amazing talks, I'm so glad I came," and chat.</li>
+      <li>9:00pm: Venue closes, so we leave and walk to
         <a href="https://www.google.com/maps/place/white+tiger+soco/data=!4m2!3m1!1s0x8644b5b735c32c5b:0x382a7b1ea168b41?sa=X&ved=1t:242&ictx=111">White Tiger</a></li>
     </ul>
     <p>If you're interested in:</p>
