Announce speakers for Oct

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <p>Schedule:</p>
     <ul>
       <li>6:00pm: Doors open, food is served</li>
-      <li>6:30pm: Talk 1</li>
-      <li>7:00pm: Talk 2</li>
+      <li>6:30pm: Adam Chalmers on building a 2D constraint solver</li>
+      <li>7:00pm: Steve Klabnik on compiler internals</li>
       <li>7:30pm: Talks conclude. Guests all tell themselves "wow, what amazing talks, I'm so glad I came," and chat.</li>
       <li>9:00pm: Venue closes, so we leave and walk to
         Aussie's Grill & Bar</li>
@@ -66,7 +66,7 @@
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSepTMSMmaDwUD4MACLew9jc2wnME9uMQnH_LAasvrMBUvYzXw/viewform?usp=dialog">using this form</a>.</p>
     <h2><span class="ping">#</span>Past meetups</h2>
     <ul>
-      <li><em>August 19th 2025</em>: Austin Seipp on cryptography, Sam Scott on Rudy</li>
+      <li><em>August 19th 2025</em>: Austin Seipp on building a secure system from a minimal set of cryptographic primitives, Sam Scott on Rudy, a Rust debugger extension for LLDB.</li>
     </ul>
     <h2><span class="ping">#</span>Kindred spirits</h2>
     <ul>
