Clarify there's no online/recording, add discord link

--- a/index.html
+++ b/index.html
@@ -62,8 +62,12 @@
       <li>Browsers, kernel development, security, etc.</li>
       <li>Anything else in the spirit of curiosity and excitement about how computers really work</li>
     </ul>
+    <p>Talks are not recorded or available remotely. We meet up in-person. If you're travelling to Austin and would like to give a talk while you're here, please let us know!</p>
     <p>To join us, just register for our invitations
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSepTMSMmaDwUD4MACLew9jc2wnME9uMQnH_LAasvrMBUvYzXw/viewform?usp=dialog">using this form</a>.</p>
+    <p>We also have a
+      <a href="https://discord.gg/PdnEcZ552M">discord server</a>. If the invitation has expired, just
+      <a href="mailto:hello@adamchalmers.com">let me know</a>.</p>
     <h2><span class="ping">#</span>Past meetups</h2>
     <ul>
       <li><em>August 19th 2025</em>: Austin Seipp on building a secure system from a minimal set of cryptographic primitives, Sam Scott on Rudy, a Rust debugger extension for LLDB.</li>
