Links for past speakers

--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
       <a href="mailto:hello@adamchalmers.com">let me know</a>.</p>
     <h2><span class="ping">#</span>Past meetups</h2>
     <ul>
-      <li><em>August 19th 2025</em>: Austin Seipp on building a secure system from a minimal set of cryptographic primitives, Sam Scott on Rudy, a Rust debugger extension for LLDB.</li>
+      <li><em>August 19th 2025</em>:
+        <a href="https://github.com/thoughtpolice">Austin Seipp</a>
+        on building a secure system from a minimal set of cryptographic primitives,
+        <a href="https://samjs.io/">Sam Scott</a>
+        on Rudy, a Rust debugger extension for LLDB.</li>
     </ul>
     <h2><span class="ping">#</span>Kindred spirits</h2>
     <ul>
