Update plan for Wednesdsay

--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
       <em>Wednesday October 15, 6pm-8pm</em>, at the
       <em>Riversouth building</em>
       (401 South 1st St, Suite 1155, 78704). The building has $5/hour parking, and there's plenty of other parking nearby, as well as bus stops and bike lanes. We'll meet
-      <em>on its rooftop terrace</em>, with an amazing view of the river and the Austin skyline.</p>
+      <em>on the 11th floor</em>.</p>
     <p>Schedule:</p>
     <ul>
-      <li>6:00pm: Doors open, food is served</li>
+      <li>6:00pm: Doors open, pizza is served (courtesy of our sponsor
+        <a href="https://www.basepowercompany.com/careers">Base Power Company</a>)</li>
       <li>6:30pm: Adam Chalmers on building a 2D constraint solver</li>
       <li>7:00pm: Steve Klabnik on compiler internals</li>
       <li>7:30pm: Talks conclude. Guests all tell themselves "wow, what amazing talks, I'm so glad I came," and chat.</li>
-      <li>9:00pm: Venue closes, so we leave and walk to
+      <li>8:00pm: Venue closes, so we leave and walk to
         Aussie's Grill & Bar</li>
     </ul>
     <p>If you're interested in:</p>
