--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
       <em>Riversouth building</em>
       (401 South 1st St, Suite 1155, 78704). The building has $5/hour parking, and there's plenty of other parking nearby, as well as bus stops and bike lanes. We'll meet
       <em>on the 11th floor</em>.</p>
+    <p>If you'd like to attend, please
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdroBX6gFrpU_Aaf-hCOWKa86AxXJnJ1YWWT6hln-TBxqtmzA/viewform">RSVP</a>.</p>
     <p>Schedule:</p>
     <ul>
       <li>6:00pm: Doors open, pizza is served (courtesy of our sponsor
         <a href="https://www.basepowercompany.com/careers">Base Power Company</a>)</li>
-      <li>6:30pm: Adam Chalmers on building a 2D constraint solver</li>
-      <li>7:00pm: Steve Klabnik on compiler internals</li>
+      <li>6:30pm: Sean Chambers on audio programming</li>
+      <li>7:00pm: Joey Buiteweg on Cloudflare Network Interconnect</li>
       <li>7:30pm: Talks conclude. Guests all tell themselves "wow, what amazing talks, I'm so glad I came," and chat.</li>
       <li>8:00pm: Venue closes, so we leave and walk to
         Aussie's Grill & Bar</li>
@@ -76,6 +78,11 @@
         on building a secure system from a minimal set of cryptographic primitives,
         <a href="https://samjs.io/">Sam Scott</a>
         on Rudy, a Rust debugger extension for LLDB.</li>
+      <li><em>October 15th 2025</em>:
+        <a href="https://steveklabnik.com">Steve Klabnik</a>
+        on compiler architecture,
+        <a href="https://adamchalmers.com">Adam Chalmers</a>
+        on 2D constraint solvers in Rust + WebAssembly</li>
     </ul>
     <h2><span class="ping">#</span>Kindred spirits</h2>
     <ul>
