--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p>Schedule:</p>
     <ul>
       <li>6:00pm: Doors open, pizza is served (courtesy of our sponsor
-        <a href="https://www.basepowercompany.com/careers">Base Power Company</a>)</li>
+        <a href="https://bonsai.io/">Bonsai.io</a>)</li>
       <li>6:30pm: Sean Chambers on audio programming</li>
       <li>7:00pm: Joey Buiteweg on Cloudflare Network Interconnect</li>
       <li>7:30pm: Talks conclude. Guests all tell themselves "wow, what amazing talks, I'm so glad I came," and chat.</li>
