--- a/index.html
+++ b/index.html
@@ -25,23 +25,24 @@
   </head>
   <body>
     <h1><span class="ping">#</span>Austin Systems Programming</h1>
-    <p>We're a collection of programmers, engineers and technologists living in Austin, TX. We meet once a month to learn about systems programming. To join us,
+    <p>We're a collection of programmers, engineers and technologists living in Austin, TX. We meet once a month (every third Wednesday) to learn about systems programming. To join us,
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSepTMSMmaDwUD4MACLew9jc2wnME9uMQnH_LAasvrMBUvYzXw/viewform?usp=dialog">click here</a>.</p>
     <h2><span class="ping">#</span>Schedule</h2>
     <p>Our next meetup will be
-      <em>Wednesday November 19, 6pm-8pm</em>, at the
+      <em>Wednesday December 17, 6pm-8pm</em>, at the
       <em>Riversouth building</em>
       (401 South 1st St, Suite 1155, 78704). The building has $5/hour parking, and there's plenty of other parking nearby, as well as bus stops and bike lanes. We'll meet
-      <em>on the 11th floor</em>.</p>
-    <p>If you'd like to attend, please
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdroBX6gFrpU_Aaf-hCOWKa86AxXJnJ1YWWT6hln-TBxqtmzA/viewform">RSVP</a>.</p>
+      <em>on the 11th floor</em>. We'll be doing
+      <em>lightning talks</em>
+      so if you want to speak for 10 mins, sign up on the night.</p>
+    <!-- <p>If you'd like to attend, please -->
+    <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSdroBX6gFrpU_Aaf-hCOWKa86AxXJnJ1YWWT6hln-TBxqtmzA/viewform">RSVP</a>.</p> -->
     <p>Schedule:</p>
     <ul>
       <li>6:00pm: Doors open, pizza is served (courtesy of our sponsor
         <a href="https://bonsai.io/">Bonsai.io</a>)</li>
-      <li>6:30pm: Joey Buiteweg on Cloudflare Network Interconnect</li>
-      <li>7:00pm: Sean Chambers on audio programming</li>
-      <li>7:30pm: Talks conclude. Guests all tell themselves "wow, what amazing talks, I'm so glad I came," and chat.</li>
+      <li>6:30pm: Lightning talks start</li>
+      <li>7:30pm: Lightning talks end, we mill around chatting and finishing the food</li>
       <li>8:00pm: Venue closes, so we leave and walk to
         Aussie's Grill & Bar</li>
     </ul>
@@ -83,6 +84,11 @@
         on compiler architecture,
         <a href="https://adamchalmers.com">Adam Chalmers</a>
         on 2D constraint solvers in Rust + WebAssembly</li>
+      <li><em>November 19, 2025</em>:
+        <a href="https://www.joeybuiteweg.com/">Joey Buiteweg</a>
+        on programming ASICs for Cloudflare network interconnect,
+        <a href="http://github.com/schambers">Sean Chambers</a>
+        on audio programming</li>
     </ul>
     <h2><span class="ping">#</span>Kindred spirits</h2>
     <ul>
