Publicize tomorrow's event

--- a/index.html
+++ b/index.html
@@ -34,16 +34,15 @@
       (401 South 1st St, Suite 1155, 78704). The building has $5/hour parking, and there's plenty of other parking nearby, as well as bus stops and bike lanes. We'll meet
       <em>on the 11th floor</em>. We'll be doing
       <em>lightning talks</em>
-      so if you want to speak for 10 mins, sign up on the night.</p>
-    <!-- <p>If you'd like to attend, please -->
-    <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSdroBX6gFrpU_Aaf-hCOWKa86AxXJnJ1YWWT6hln-TBxqtmzA/viewform">RSVP</a>.</p> -->
+      so if you want to speak for 10 mins, just show up and sign up on the night.</p>
+    <p>If you'd like to attend, please
+      <a href="https://forms.gle/bQeo3Vymy8j396XV9">RSVP</a>.</p>
     <p>Schedule:</p>
     <ul>
       <li>6:00pm: Doors open, pizza is served (courtesy of our sponsor
-        <a href="https://bonsai.io/">Bonsai.io</a>)</li>
+        <a href="https://antithesis.com">Antithesis</a>)</li>
       <li>6:30pm: Lightning talks start</li>
-      <li>7:30pm: Lightning talks end, we mill around chatting and finishing the food</li>
-      <li>8:00pm: Venue closes, so we leave and walk to
+      <li>8:30: Lightning talks end, we leave and walk to
         Aussie's Grill & Bar</li>
     </ul>
     <p>If you're interested in:</p>
