Publicize next event

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSepTMSMmaDwUD4MACLew9jc2wnME9uMQnH_LAasvrMBUvYzXw/viewform?usp=dialog">click here</a>.</p>
     <h2><span class="ping">#</span>Schedule</h2>
     <p>Our next meetup will be
-      <em>Wednesday December 17, 6pm-8pm</em>, at the
+      <em>Wednesday January 21, 6pm-8pm</em>, at the
       <em>Riversouth building</em>
       (401 South 1st St, Suite 1155, 78704). The building has $5/hour parking, and there's plenty of other parking nearby, as well as bus stops and bike lanes. We'll meet
       <em>on the 11th floor</em>. We'll be doing
@@ -41,8 +41,8 @@
     <ul>
       <li>6:00pm: Doors open, pizza is served (courtesy of our sponsor
         <a href="https://antithesis.com">Antithesis</a>)</li>
-      <li>6:30pm: Lightning talks start</li>
-      <li>8:30: Lightning talks end, we leave and walk to
+      <li>6:30pm: Talks start</li>
+      <li>8:30: Talks end, we leave and walk to
         Aussie's Grill & Bar</li>
     </ul>
     <p>If you're interested in:</p>
@@ -88,6 +88,7 @@
         on programming ASICs for Cloudflare network interconnect,
         <a href="http://github.com/schambers">Sean Chambers</a>
         on audio programming</li>
+      <li><em>December 17, 2025</em>: Lightning talks from a range of people</li>
     </ul>
     <h2><span class="ping">#</span>Kindred spirits</h2>
     <ul>
