Noah and Graeme

--- a/index.html
+++ b/index.html
@@ -32,18 +32,17 @@
       <em>Wednesday January 21, 6pm-8pm</em>, at the
       <em>Riversouth building</em>
       (401 South 1st St, Suite 1155, 78704). The building has $5/hour parking, and there's plenty of other parking nearby, as well as bus stops and bike lanes. We'll meet
-      <em>on the 11th floor</em>. We'll be doing
-      <em>lightning talks</em>
-      so if you want to speak for 10 mins, just show up and sign up on the night.</p>
+      <em>on the 11th floor</em>.</p>
     <p>If you'd like to attend, please
       <a href="https://forms.gle/bQeo3Vymy8j396XV9">RSVP</a>.</p>
     <p>Schedule:</p>
     <ul>
       <li>6:00pm: Doors open, pizza is served (courtesy of our sponsor
         <a href="https://antithesis.com">Antithesis</a>)</li>
-      <li>6:30pm: Talks start</li>
-      <li>8:30: Talks end, we leave and walk to
-        Aussie's Grill & Bar</li>
+      <li>6:30pm: Noah Kennedy talking about thread-per-core and getting high performance out of concurrent async systems.</li>
+      <li>7pm: Graeme Cloughley talking about CHERI and how to solve memory-safety at the hardware level</li>
+      <li>7:30: Talks end, we finish the beer and pizza</li>
+      <li>8:00: We leave for Aussie's Bar and Grill where drinks can continue</li>
     </ul>
     <p>If you're interested in:</p>
     <ul>
