Change talks for James USB

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <ul>
       <li>6:00pm: Doors open, pizza is served (courtesy of our sponsor
         <a href="https://antithesis.com">Antithesis</a>)</li>
-      <li>6:30pm: Noah Kennedy talking about thread-per-core and getting high performance out of concurrent async systems.</li>
-      <li>7pm: Graeme Cloughley talking about CHERI and how to solve memory-safety at the hardware level</li>
+      <li>6:30pm: James Coman talking about his USB cross-bar switch</li>
+      <li>7:00pm: Noah Kennedy talking about thread-per-core and getting high performance out of concurrent async systems.</li>
       <li>7:30: Talks end, we finish the beer and pizza</li>
       <li>8:00: We leave for Aussie's Bar and Grill where drinks can continue</li>
     </ul>
